5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2498.log
== TEST (2019-05-09 16:33:13) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))/100

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:48) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = (float(input("percentual de crescimento city A: "))/100)
%city2 = (float(input("percentual de crescimento city B: "))/100)

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = (float(input())/100)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:10) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:17) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:53) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:38) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:54) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:55) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:55) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:55) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:56) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:56) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:56) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:37:11) 
-- CODE:
city1 = float(input("numero de habitantes cidade A: "))
city2 = float(input("numero de habitantes cidade B: "))
%city1 = float(input("percentual de crescimento city A: "))/100
%city2 = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 3
    %city1 = float(input())/100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:37:58) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0
while()
-- ERROR:
File "XXXX", line 9
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:38:08) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))

haba= 1
habb= 1
anos = 0

-- ERROR:
File "XXXX", line 9
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:38:18) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

haba= 1
habb= 1
anos = 0

-- ERROR:
File "XXXX", line 9
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:41:06) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(a<b):
	hab_a = hab_a*c
	hab_b = hab_b*d
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:44:40) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= 1
hab_b= 1
anos = 0
while(a<b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:48:31) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= 1
hab_b= 1
anos = 0
while(a<b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	
	print(anos)
	anos = anos+1
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:02:26) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(a<b):
	hab_a = hab_a + a*c
	hab_b = hab_b + b*d
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:04:48) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	hab_a = hab_a + a*c
	hab_b = hab_b + b*d
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:04:53) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	hab_a = hab_a + a*c
	hab_b = hab_b + b*d
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.030118
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:05:05) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	hab_a = hab_a + a*c
	hab_b = hab_b + b*d
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:14:02) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= 0
hab_b= 0
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:14:07) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= 0
hab_b= 0
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.0289021
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:17:05) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:17:10) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.029422
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:17:29) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.030488
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:17:34) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.0334601
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:17:36) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:23:25) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b and (a*c)<(b*d)):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:23:29) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b and (a*c)<(b*d)):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.032145
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:23:45) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b and (a*c)<(b*d)):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	anos = anos + 1
	print(anos)
	
-- EXECUTION TIME:
0.0268409
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:24:54) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b:
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	print(anos)
	
-- ERROR:
File "XXXX", line 9
    while(hab_a<hab_b:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:24:58) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b:
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	print(anos)
	
-- EXECUTION TIME:
0.0286982
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:26:04) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	print(anos)
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:26:32) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	print(anos)
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:28:16) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b and anos < 1):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	
	print(anos)
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 15:28:19) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b and anos < 1):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	
	print(anos)
	
-- EXECUTION TIME:
0.029521
-- ERROR:
Error response from daemon: Container c8aa60ecc8e8cede2ec03b0aded8f3654c19a82aa91e4248076056715683de15 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:30:26) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100

hab_a= a
hab_b= b
anos = 0
while(hab_a<hab_b):
	if(c>d): 
		cresc_a = a*c
		cresc_b = b*d
		hab_a = hab_a + cresc_a
		hab_b = hab_b + cresc_b
	else:
			
	print(anos)
	
-- ERROR:
File "XXXX", line 17
    print(anos)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:10:41) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100


anos = 0
while(a<b):
	cresc_a = a*c
	cresc_b = b*d
	hab_a = hab_a + cresc_a
	hab_b = hab_b + cresc_b
	
	print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    hab_a = hab_a + cresc_a
NameError: name 'hab_a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:10) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100


anos = 0
while(a<b):
	a = a + (a * c)
	b = b + (b * d)
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:16) 
-- CODE:
a = float(input("numero de habitantes cidade A: "))
b = float(input("numero de habitantes cidade B: "))
c = float(input("percentual de crescimento city A: "))/100
d = float(input("percentual de crescimento city B: "))/100


anos = 0
while(a<b):
	a = a + (a * c)
	b = b + (b * d)
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.130307
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
